
	* 'fit.ghypmv' is equipped with a boolean 'trace' as a consequence
	of the above modification. In the univariate case 'trace' is
	always true, meaning that the parameters will be stored in the
	slot 'trace.pars' in any case.

	* 'ghyp.fit.info' returns a formatted version of the data in the
	slot 'trace.pars'.

	* Initial value of 'alpha.bar' changed to 0.5 instead of 0.1 in
	'fit.ghypuv'.

	* Function 'ghyp.omega' added. 'ESghyp' and 'ghyp.omega' are now
	described in the .Rd file 'ghyp-risk-performance'.



2008-10-28 David Luethi
ghyp V1.4.0

	* 'ghyp.moment': in case of central moments: wrongly took
	parameter 'mu' instead of the expected value in case 'central' was
	TRUE.  'ghyp.moment' was extended such that it takes analytical
	expressions and avoids numerical integration whenever possible.

	* The package 'ghyp' now depends on R >= 2.7. Function 'identity'
	was removed accordingly.

	* Functions 'ghyp.skewness' and 'ghyp.kurtosis' added.

	* 'ghyp' is on R-forge.

	* Instead of putting each function in a different file, functions
	are now collected in 8 files: 'ghypClasses', 'ghypConstructors',
	'ghypFitting', 'ghypGenericMethods', 'ghypGIG', 'ghypInternals',
	'ghypMethods', 'ghypWrappers'.

	* Internal functions now all come with a '.' in front of the name.

	* Internal function 'internal.dghyp' and 'internal.dghypmv'
	renamed to '.dghypuv' and '.dghypmv' respectively.

	* Package vignette extended.

	* Function 'ghyp.dim' added. Returns the dimension of a 'ghyp'
	object.

	* Internal function '.is.symmetric' added.

	* Dataset 'indices', representing 5 financial indices,
	and documentation file 'indices.Rd' added.

	* Function 'portfolio.optimize' extended for tangecy and global
	minimum risk portfolios. Some names of the arguments had to be
	changed.



2008-10-30 David Luethi
ghyp V1.4.1

	* 'transform.ghyp': If data is stored in slot 'data' of an object
	inheriting from class 'ghyp', 'data' will be transformed as well.

