@@ -23,6 +23,7 @@ exportMethods("AIC")
 exportMethods("coef")
 exportMethods("coefficients")
 exportMethods("summary")
+exportMethods("scale")
 exportMethods("plot")
 exportMethods("lines")
 S3Method("[", ghyp)
